# gdm

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yaml
src/: CMakeLists.txt  Vector3D.hpp  cmake_install.cmake  matrix.hpp  precompiled_headers.cpp  precompiled_headers.hpp
test/: CMakeLists.txt  Matrix_Test.cpp  Vector3D_Test.cpp
